kubernetes/applications/apps/homeassistant/cloudflare-tunnel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-cloudflare
  namespace: apps
  labels:
    app: homeassistant
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: homeassistant.kernow.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
